<resources>
    <string name="app_name">iTuto</string>
    <string name="iTuto">iTuto</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="confirmHint">Confirm Password</string>

    <string name="btnTextSignIn">Login</string>
    <string name="btnTextSignUp">Register</string>
    <string name="txtTextSignIn"><u>Log in</u></string>
    <string name="txtTextAlready">Already have an account?</string>
    <string name="txtTextDont">Don\'t have an account?</string>
    <string name="txtTextRegister"><u>Create an account</u></string>

    <string name="searchMain">Search for the tutor\'s name or email...</string>

    <string name="navigation_draw_open">Open Navigation Draw</string>
    <string name="navigation_draw_close">Close Navigation Draw</string>

    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="empty" />

    <string name="looking_for">Looking for a tutor?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="findATutor">Find A Tutor</string>
    <string name="becomeATutor">Become A Tutor</string>
    <string name="take_a_look_at_these_categories">Take a look at these categories...</string>
    <string name="send">Send</string>
    <string name="start_a_new_message">Start a new message</string>
    <string name="_5_04pm">5:04pm</string>
    <string name="hi_joe_looks_great">Hi, Joe, looks great! :)</string>
    <string name="laura_owens">Laura Owens</string>
    <string name="_3">3</string>

    <string name="sample_message_me">Hi, joe how are you, do you like to join our party in next week because you don\'t like party?</string>
    <string name="sample_message_you">Hi, joe how are you, do you like to join our party in next week because you don\'t like party?</string>
    <string name="app_description">Discover students who are interested in sharing their attained skills and knowledge.</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="logout">Logout</string>
    <string name="update_profile">Update Profile</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_leave">Are you sure you want leave?</string>
    <string name="search">Search</string>
    <string name="phone_number">Phone Number</string>
    <string name="course">Course</string>
    <string name="subject">Subject</string>
    <string name="aboutMe">I am an experienced computer programmer and tutor marketing expert, with a proven track record of writing engaging, informative content. My diverse expertise creates powerful marketing campaigns that generate ROI across a wide range of industries</string>
    <string name="server_client_id">744222966084-5tf8j3ap87ne5blc09m5s8vic8uu2k24.apps.googleusercontent.com</string>

    <string name="A">A. Lorem Ipsum Answer</string>
    <string name="B">B. Lorem Ipsum Answer</string>
    <string name="C">C. Lorem Ipsum Answer</string>
    <string name="D">D. Lorem Ipsum Answer</string>

    <string name="textview">Which of these requires the use of file handling features of Easy retrieve used?</string>
    <string name="hello">hello</string>

    <string name="forgotPassword"><a href="https://mern-ituto.herokuapp.com/forgot/password">Forgot Password?</a></string>
</resources>