<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/iTuto"
        android:textColor="@color/colorPrimary"
        android:textFontWeight="900"
        android:textSize="32sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/app_description"
        android:textColor="@color/colorHint"
        android:textFontWeight="700"
        android:textSize="12sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="80dp"
        android:src="@drawable/ic_undraw_welcome_re_h3d9" />

    <Button
        android:id="@+id/btnFindTutor"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_solid"
        android:elevation="20dp"
        android:text="@string/findATutor"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:theme="@style/Button.Primary" />

    <Button
        android:id="@+id/btnBecomeTutor"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/btn_transparent_with_border"
        android:text="@string/becomeATutor"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        android:theme="@style/Button.Primary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/txtTextAlready" />

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTextSignIn"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</LinearLayout>