<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="200dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center_horizontal"
        android:text="@string/iTuto"
        android:textColor="@color/colorPrimary"
        android:textFontWeight="900"
        android:textSize="32sp" />


    <Button
        android:id="@+id/btnFindTutor"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_round"
        android:elevation="4dp"
        android:text="@string/findATutor"
        android:textAllCaps="false"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btnBecomeTutor"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/btn_round"
        android:elevation="4dp"
        android:text="@string/becomeATutor"
        android:textAllCaps="false"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/txtTextAlready"/>

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTextSignIn"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

</LinearLayout>