<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:text="@string/iTuto"
        android:textFontWeight="900"
        android:textSize="32sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutEmailSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:textSize="15sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:textSize="15sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutConfirmSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtConfirmSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/confirmHint"
            android:inputType="textPassword"
            android:textSize="15sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/btn_round"
        android:text="@string/btnTextSignUp"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/txtTextAlready"/>

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTextSignIn"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

</LinearLayout>