<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/iTuto"
        android:textColor="@color/colorPrimary"
        android:textFontWeight="900"
        android:textSize="32sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/app_description"
        android:textColor="@color/colorHint"
        android:textFontWeight="700"
        android:textSize="12sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutEmailSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:theme="@style/Button.Primary"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:textSize="13sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:theme="@style/Button.Primary"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:textSize="13sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutConfirmSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:theme="@style/Button.Primary"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtConfirmSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:hint="@string/confirmHint"
            android:inputType="textPassword"
            android:textSize="13sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_solid"
        android:elevation="4dp"
        android:fontFamily="@font/roboto"
        android:text="@string/btnTextSignUp"
        android:textColor="@color/colorWhite"
        android:theme="@style/Button.Primary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="or" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toLeftOf="@id/tvText"
            android:background="@android:color/darker_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@id/tvText"
            android:background="@android:color/darker_gray" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnSignInWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/btn_transparent_with_border"
        android:drawableLeft="@drawable/ic_google_logo"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:theme="@style/Button.Primary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/txtTextAlready"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/txtTextSignIn"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>