<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/crdQuestion"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_grey"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="10">

            <EditText
                android:id="@+id/txtAnswer"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:digits="ABCD"
                android:gravity="center"
                android:inputType="textCapCharacters"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtItemNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:text="1."
                android:textSize="13sp" />


            <TextView
                android:id="@+id/txtQuestion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8.2"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/textview"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtChoiceA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/A"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtChoiceB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/B"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtChoiceC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/C"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtChoiceD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/D"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
