<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="10">

            <EditText
                android:id="@+id/txtAnswer"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:digits="ABCD"
                android:gravity="center"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtItemNum"
                android:layout_width="0dp"
                android:layout_weight=".8"
                android:layout_height="wrap_content"
                android:text="1."
                android:textSize="13sp" />


            <TextView
                android:id="@+id/txtQuestion"
                android:layout_width="0dp"
                android:layout_weight="8.2"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/textview"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtChoiceA"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/A"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtChoiceB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/B"
                android:textColor="#000"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtChoiceC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/C"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtChoiceD"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/D"
                android:textColor="#000"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>