<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="90dp"
    android:background="@drawable/bg_bottom_grey">
    <CheckBox
        android:id="@+id/chk_list"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:button="@drawable/checkbox"
        android:layout_marginStart="10dp"
        android:layout_centerVertical="true"
        android:visibility="gone"/>
    <RelativeLayout
        android:id="@+id/rl_photo"
        android:layout_toEndOf="@id/chk_list"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUserContact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/user2" />

        <TextView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="-2dp"
            android:gravity="center"
            android:text="@string/_3"
            android:textSize="@dimen/h4"
            android:textColor="@color/colorPrimary2"
            android:background="@drawable/bg_unread"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:paddingEnd="20dp"
        android:layout_toEndOf="@+id/rl_photo"
        android:gravity="center_vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laura_owens"/>

            <View
                android:id="@+id/online_indicator"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignTop="@id/txtUserName"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/txtUserName"
                android:background="@drawable/bg_online" />

            <TextView
                android:id="@+id/txtLastMessage"
                android:layout_below="@id/txtUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hi_joe_looks_great"
                android:textSize="@dimen/h3"
                android:layout_marginTop="3dp"/>
            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5_04pm"
                android:textColor="@color/black"
                android:textSize="@dimen/h4"
                android:layout_alignTop="@id/online_indicator"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>